build/log/idf_py_stderr_output_57481
/Users/elvisserem/projects/sunsense-blinds/sunsense-blinds/components/mode_controller/mode_controller.c: In function 'mode_init':
/Users/elvisserem/projects/sunsense-blinds/sunsense-blinds/components/mode_controller/mode_controller.c:9:6: error: 'ModeController' has no member named 'menu_selected_index'
    9 |     m->menu_selected_index = 0;  // Start on AUTO MODE
      |      ^~
/Users/elvisserem/projects/sunsense-blinds/sunsense-blinds/components/mode_controller/mode_controller.c: In function 'mode_handle_up':
/Users/elvisserem/projects/sunsense-blinds/sunsense-blinds/components/mode_controller/mode_controller.c:30:10: error: 'ModeController' has no member named 'menu_selected_index'
   30 |     if (m->menu_selected_index == 0) {
      |          ^~
/Users/elvisserem/projects/sunsense-blinds/sunsense-blinds/components/mode_controller/mode_controller.c:31:10: error: 'ModeController' has no member named 'menu_selected_index'
   31 |         m->menu_selected_index = NUM_MENU_ITEMS - 1;
      |          ^~
/Users/elvisserem/projects/sunsense-blinds/sunsense-blinds/components/mode_controller/mode_controller.c:33:10: error: 'ModeController' has no member named 'menu_selected_index'
   33 |         m->menu_selected_index--;
      |          ^~
/Users/elvisserem/projects/sunsense-blinds/sunsense-blinds/components/mode_controller/mode_controller.c: In function 'mode_handle_down':
/Users/elvisserem/projects/sunsense-blinds/sunsense-blinds/components/mode_controller/mode_controller.c:45:10: error: 'ModeController' has no member named 'menu_selected_index'
   45 |     if (m->menu_selected_index >= NUM_MENU_ITEMS - 1) {
      |          ^~
/Users/elvisserem/projects/sunsense-blinds/sunsense-blinds/components/mode_controller/mode_controller.c:46:10: error: 'ModeController' has no member named 'menu_selected_index'
   46 |         m->menu_selected_index = 0;
      |          ^~
/Users/elvisserem/projects/sunsense-blinds/sunsense-blinds/components/mode_controller/mode_controller.c:48:10: error: 'ModeController' has no member named 'menu_selected_index'
   48 |         m->menu_selected_index++;
      |          ^~
/Users/elvisserem/projects/sunsense-blinds/sunsense-blinds/components/mode_controller/mode_controller.c: In function 'mode_handle_enter':
/Users/elvisserem/projects/sunsense-blinds/sunsense-blinds/components/mode_controller/mode_controller.c:56:14: error: 'ModeController' has no member named 'menu_selected_index'
   56 |         if (m->menu_selected_index == 0) {
      |              ^~
/Users/elvisserem/projects/sunsense-blinds/sunsense-blinds/components/mode_controller/mode_controller.c:58:21: error: 'ModeController' has no member named 'menu_selected_index'
   58 |         } else if (m->menu_selected_index == 1) {
      |                     ^~
/Users/elvisserem/projects/sunsense-blinds/sunsense-blinds/components/mode_controller/mode_controller.c:64:10: error: 'ModeController' has no member named 'menu_selected_index'
   64 |         m->menu_selected_index = 0;
      |          ^~
/Users/elvisserem/projects/sunsense-blinds/sunsense-blinds/components/mode_controller/mode_controller.c: In function 'mode_get_selected_index':
/Users/elvisserem/projects/sunsense-blinds/sunsense-blinds/components/mode_controller/mode_controller.c:70:13: error: 'ModeController' has no member named 'menu_selected_index'
   70 |     return m->menu_selected_index;
      |             ^~
/Users/elvisserem/projects/sunsense-blinds/sunsense-blinds/components/mode_controller/mode_controller.c:71:1: error: control reaches end of non-void function [-Werror=return-type]
   71 | }
      | ^
cc1: some warnings being treated as errors
make[2]: *** [esp-idf/mode_controller/CMakeFiles/__idf_mode_controller.dir/mode_controller.c.obj] Error 1
make[1]: *** [esp-idf/mode_controller/CMakeFiles/__idf_mode_controller.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
make: *** [all] Error 2
